Update chat widget with actual Tawk.to Site ID

--- a/website/chat-config.html
+++ b/website/chat-config.html
@@ -70,7 +70,7 @@
                     <form id="chat-config-form" class="config-form" data-validate="true">
                         <div class="form-group">
                             <label for="tawk-id" class="required">Tawk.to Site ID</label>
-                            <input type="text" id="tawk-id" name="tawk-id" required placeholder="YOUR_TAWK_TO_ID">
+                            <input type="text" id="tawk-id" name="tawk-id" required value="67fafa60aa6e5419080f5e98/1iom642as">
                             <div class="form-help">Find this in your Tawk.to dashboard under "Administration" > "Property Settings"</div>
                         </div>
 
