Update contact information with Tawk.to ticketing email

--- a/website/contact.html
+++ b/website/contact.html
@@ -123,7 +123,8 @@
                         </div>
                         <div class="info-content">
                             <h3>Email</h3>
-                            <p><a href="mailto:support@solarbot.io">support@solarbot.io</a></p>
+                            <p><a href="mailto:contact@solarbot.io">contact@solarbot.io</a></p>
+                            <p><a href="mailto:tickets@solarbot-rv5cu4.p.tawk.email">tickets@solarbot-rv5cu4.p.tawk.email</a> (Support Tickets)</p>
                         </div>
                     </div>
 
@@ -132,8 +133,9 @@
                             <i class="fas fa-comment-dots"></i>
                         </div>
                         <div class="info-content">
-                            <h3>Live Chat</h3>
-                            <p>Available Monday-Friday, 9am-5pm UTC</p>
+                            <h3>Live Chat & Support Tickets</h3>
+                            <p>Chat available Monday-Friday, 9am-5pm UTC</p>
+                            <p>Support tickets are processed 24/7</p>
                         </div>
                     </div>
 
