--- a/website/pricing.html
+++ b/website/pricing.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/comparison-grid.css">
     <link rel="stylesheet" href="css/trial-badge.css">
+    <link rel="stylesheet" href="css/pricing-fixes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -583,6 +584,7 @@
 
     <script src="js/script.js"></script>
     <script src="js/comparison-grid.js"></script>
+    <script src="js/pricing-toggle.js"></script>
     <!-- Stripe.js and Checkout Integration -->
     <script src="https://js.stripe.com/v3/"></script>
     <script>
